# bmbp_sync_quic

./: Cargo.toml  LICENSE  README.en.md  README.md  bmbp_msg.db  build_scss.sh  build_tsx.sh
src/: bean.rs  init.rs  main.rs
src/app/: mod.rs  routes.rs  view.rs
src/app/history/table/: mod.rs
src/app/home/: action.rs  bean.rs  mod.rs
src/app/init/: ctx.rs  mod.rs
src/app/manage/: mod.rs
src/app/manage/topic/: bean.rs  mod.rs
src/app/manage/topic/client/: kafka.rs  mod.rs
src/app/monitor/: action.rs  bean.rs  cache.rs  mod.rs  monitor.rs
src/app/task/: action.rs  mod.rs
src/key/: bean.rs  keyword.rs  mod.rs
src/orm/: mod.rs
tests/: test_monitor.rs  test_msg.rs
web/scss/: bmbp.scss
web/static/css/: bmbp.css  bmbp.css.map
web/static/lib/: http.js
web/static/lib/arco/: arco-icon.min.js  arco.min.css  arco.min.js
web/static/lib/bmbp/: bmbp.css  bmbp.css.map
web/static/lib/chart/: vchart.min.js
web/template/app/config/: datasource.html  kafka.html
web/template/app/history/: table.html  topic.html
web/template/app/home/: home.html  index.html
web/template/app/manage/: table.html  topic.html
web/template/app/monitor/: table.html  topic.html
web/template/app/report/: table.html  topic.html
web/template/app/task/: monitor.html  task.html
web/tsx/app/config/datasource/: index.tsx
web/tsx/app/config/kafka/: index.tsx
web/tsx/app/history/table/: index.tsx
web/tsx/app/history/topic/: index.tsx
web/tsx/app/home/home/: action.tsx  index.tsx
web/tsx/app/home/index/: index.tsx
web/tsx/app/manage/table/: index.tsx
(+24 files in other folders)
